Revert "Pass over consent"
This reverts commit 264ed5ee6f0c21ea13f7e5242ce2d2bfad1ce574.